--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,10 +1,21 @@
 #root {
   display: flex;
   flex-direction: column;
-  font-family: Helvetica;
+  font-family: 'Avant Garde';
+  background-color: var(--lightUI);
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
+
+.btn {
+  background-color: transparent;
+  font-family: inherit;
+  border: none;
+  border-radius: 3px;
+  font-size: inherit;
+  cursor: pointer;
+  transition: transform ease-in 0.2s;
+}
+
+.btn:hover {
+  transform: scale(1.02);
 }
