--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -2,16 +2,92 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 20px;
+  gap: 30px;
+  padding: var(--gapMain);
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: var(--darkUI);
+  padding: 12px;
+  border-radius: 5px;
+  box-shadow: var(--cardShadow);
+  cursor: pointer;
+  transition: transform ease-in 0.2s;
+  opacity: 0;
+  animation: popIn 0.2s ease forwards;
 }
 
+.card:hover {
+  transform: scale(1.02);
+  box-shadow: var(--popShadow);
+}
+
+
 .cardImg {
-  width: 280px;
+  width: 250px;
+  border-radius: 2px;
+}
+
+
+@keyframes popIn {
+  to {
+    opacity: 1;
+  }
+}
+
+/* POP UP */
+main {
+  position: relative;
+}
+
+.curtain {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+  /* for Safari */
+}
+
+.popup {
+  position: absolute;
+  width: 35%;
+  height: 35%;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: var(--gapMain);
+  background-image: url('../assets/img/ghibli.jpg');
+  background-size: cover;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  box-shadow: var(--popShadow);
+  border: 1px solid black;
+}
+
+.message {
+  font-size: 48px;
+  opacity: 0.95;
+  margin: 0;
+}
+
+.popup .btn {
+  color: var(--lightUI);
+  font-size: 16px;
+  background-color: var(--darkUI);
+  opacity: 0.9;
+  padding: 6px 20px;
+  border-radius: 5px;
+  transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
+
+}
+
+.popup .btn:hover {
+  opacity: 1;
 }
