--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,25 @@
-body{
-  margin:0;
-  padding:0;
-  width:100vw;
+@font-face {
+  font-family: 'Avant Garde';
+  src: url('../assets/fonts/ITC Avant Garde Gothic Std Medium.woff2');
+  font-weight: normal;
+}
+
+@font-face {
+  font-family: 'Gothic';
+  src: url('../assets/fonts/MSGOTHIC.woff2');
+  font-weight: normal;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  --lightUI: #F4F4F4;
+  --totoroBlue: #109CEB;
+  --darkUI: #221815;
+  --primaryText: white;
+  --gapMain: 15px;
+  --cardShadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  --popShadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  background-color: var(--lightUI);
 }
